// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CAccordionHeader customize 1`] = `
<div>
  <div
    class="accordion-header bazinga"
  >
    <button
      class="accordion-button collapsed"
      type="button"
    >
      Test
    </button>
  </div>
</div>
`;

exports[`loads and displays CAccordionHeader component 1`] = `
<div>
  <div
    class="accordion-header"
  >
    <button
      class="accordion-button collapsed"
      type="button"
    >
      Test
    </button>
  </div>
</div>
`;
